# OOP

Lab_1/: CMakeLists.txt
Lab_1/inc/: action.h  app.h  camera.h  canvas.h  errors.h  processing.h  scene.h  wire-frame_model.h
Lab_1/src/: action.c  app.c  canvas.c  main.c  processing.c  scene.c
Lab_1/ui/: mainwindow.ui  menu.ui  styles.css
